lang-options.h: Added a comma after the last element to avoid syntax errors when other languages define additional options.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35515 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+Sun Aug  6 00:47:24 2000  Ovidiu Predescu  <ovidiu@cup.hp.com>
+
+	* lang-options.h: Added a comma after the last element to avoid
+	syntax errors when other languages define additional options.
+
 2000-08-04  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* Make-lang.in (jc1, jv-scan): Depend on $(BACKEND), not stamp-objlist.
