* rs6000.c (rs6000_maybe_dead): Prototype.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35522 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-06  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* rs6000.c (rs6000_maybe_dead): Prototype.
+
 2000-08-06  Richard Henderson  <rth@cygnus.com>
 
 	* stmt.c (expand_goto): Do virtual_stack_vars_rtx replacement for
