* expr.c: Fix formatting.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35523 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-06  Kazu Hirata  <kazu@hxi.com>
+
+	* expr.c: Fix formatting.
+
 2000-08-06  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* rs6000.c (rs6000_maybe_dead): Prototype.
