* tm.texi (FUNCTION_ARG_PARTIAL_NREGS): Fix a typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35525 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2000-08-06  Kazu Hirata  <kazu@hxi.com>
 
+	* dwarf2out.c: Fix formatting.
+
 	* tm.texi (FUNCTION_ARG_PARTIAL_NREGS): Fix a typo.
 
 	* expr.c: Fix formatting.
