* h8300.c (dosize): Rearrange code for conciseness.         (split_adds_subs): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35527 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-08-06  Kazu Hirata  <kazu@hxi.com>
 
+	* h8300.c (dosize): Rearrange code for conciseness.
+	(split_adds_subs): Likewise.
+
 	* loop.c: Fix formatting.
 
 	* dwarf2out.c: Fix formatting.
