* gcc.c-torture/execute/20000801-4.x: Only xfail on x86.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35528 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-06  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.c-torture/execute/20000801-4.x: Only xfail on x86.
+
 2000-08-05  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.c-torture/execute/20000731-1.x: Delete.  
