--- a/gcc/invoke.texi
+++ b/gcc/invoke.texi
@@ -2267,62 +2267,68 @@ Annotate the assembler output with miscellaneous debugging information.
 @item b
 Dump after computing branch probabilities, to @file{@var{file}.11.bp}.
 @item B
-Dump after block reordering, to @file{@var{file}.24.bbro}.
+Dump after block reordering, to @file{@var{file}.25.bbro}.
 @item c
-Dump after instruction combination, to the file @file{@var{file}.13.combine}.
+Dump after instruction combination, to the file @file{@var{file}.14.combine}.
+@item C
+Dump after the first if conversion, to the file @file{@var{file}.15.ce}.
 @item d
-Dump after delayed branch scheduling, to @file{@var{file}.27.dbr}.
+Dump after delayed branch scheduling, to @file{@var{file}.28.dbr}.
 @item D
 Dump all macro definitions, at the end of preprocessing, in addition to
 normal output.
 @item e
 Dump after SSA optimizations, to @file{@var{file}.05.ssa} and
 @file{@var{file}.06.ussa}.
+@item E
+Dump after the second if conversion, to @file{@var{file}.21.ce2}.
 @item f
-Dump after life analysis, to @file{@var{file}.12.life}.
+Dump after life analysis, to @file{@var{file}.13.life}.
 @item F
 Dump after purging @code{ADDRESSOF} codes, to @file{@var{file}.04.addressof}.
 @item g
-Dump after global register allocation, to @file{@var{file}.18.greg}.
+Dump after global register allocation, to @file{@var{file}.19.greg}.
 @item G      
-Dump after GCSE, to @file{@var{file}.07.gcse}.
+Dump after GCSE, to @file{@var{file}.08.gcse}.
 @item i
 Dump after sibling call optimizations, to @file{@var{file}.01.sibling}.
 @item j
-Dump after first jump optimization, to @file{@var{file}.02.jump}.
+Dump after the first jump optimization, to @file{@var{file}.02.jump}.
 @item J
-Dump after last jump optimization, to @file{@var{file}.25.jump2}.
+Dump after the last jump optimization, to @file{@var{file}.26.jump2}.
 @item k
-Dump after conversion from registers to stack, to @file{@var{file}.28.stack}.
+Dump after conversion from registers to stack, to @file{@var{file}.29.stack}.
 @item l
-Dump after local register allocation, to @file{@var{file}.17.lreg}.
+Dump after local register allocation, to @file{@var{file}.18.lreg}.
 @item L
-Dump after loop optimization, to @file{@var{file}.08.loop}.
+Dump after loop optimization, to @file{@var{file}.09.loop}.
 @item M
 Dump after performing the machine dependent reorganisation pass, to
-@file{@var{file}.26.mach}. 
+@file{@var{file}.27.mach}. 
 @item n
-Dump after register renumbering, to @file{@var{file}.22.rnreg}.
+Dump after register renumbering, to @file{@var{file}.23.rnreg}.
 @item N
-Dump after the register move pass, to @file{@var{file}.15.regmove}.
+Dump after the register move pass, to @file{@var{file}.16.regmove}.
 @item r
 Dump after RTL generation, to @file{@var{file}.00.rtl}.
 @item R
 Dump after the second instruction scheduling pass, to
-@file{@var{file}.239.sched2}.
+@file{@var{file}.24.sched2}.
 @item s
 Dump after CSE (including the jump optimization that sometimes follows
 CSE), to @file{@var{file}.03.cse}. 
 @item S
 Dump after the first instruction scheduling pass, to
-@file{@var{file}.16.sched}.
+@file{@var{file}.17.sched}.
 @item t
 Dump after the second CSE pass (including the jump optimization that
-sometimes follows CSE), to @file{@var{file}.09.cse2}.
+sometimes follows CSE), to @file{@var{file}.10.cse2}.
 @item w
-Dump after the second flow pass, to @file{@var{file}.19.flow2}.
+Dump after the second flow pass, to @file{@var{file}.20.flow2}.
+@item X
+Dump after dead code elimination, to @file{@var{file}.06.dce}.
 @item z
-Dump after the peephole pass, to @file{@var{file}.21.peephole2}.
+Dump after the peephole pass, to @file{@var{file}.22.peephole2}.
 @item a
 Produce all the dumps listed above.
 @item m
@@ -2337,14 +2343,14 @@ For each of the other indicated dump files (except for
 @file{@var{file}.00.rtl}), dump a representation of the control flow graph
 suitable for viewing with VCG to @file{@var{file}.@var{pass}.vcg}.
 @item w
-Dump after the second flow pass to @file{@var{file}.19.flow2}. 
+Dump after the second flow pass to @file{@var{file}.20.flow2}. 
 @item x
 Just generate RTL for a function instead of compiling it.  Usually used
 with @samp{r}.
 @item y
 Dump debugging information during parsing, to standard error.
 @item z
-Dump after the peephole2 pass to @file{@var{file}.21.peephole2}.
+Dump after the peephole2 pass to @file{@var{file}.22.peephole2}.
 @end table
 
 @item -fdump-unnumbered
