* invoke.texi (Options for Debugging Your Program or GCC): Remove 	duplicate entries for 'w' and 'z'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35543 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-08-07  Kazu Hirata  <kazu@hxi.com>
 
+	* invoke.texi (Options for Debugging Your Program or GCC): Remove
+	duplicate entries for 'w' and 'z'.
+
 	* flow.c: Fix a comment typo.
 
 Sun Aug  6 23:47:35 2000  Ovidiu Predescu  <ovidiu@cup.hp.com>
