* mn10300.h (PREFERRED_RELOAD_CLASS): Limit memory reloads.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35550 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-07  Graham Stott  <grahams@cygnus.co.uk>
+
+	* mn10300.h (PREFERRED_RELOAD_CLASS): Limit memory reloads.
+
 2000-08-07  Alexandre Oliva  <aoliva@redhat.com>
 
 	* sh.h (EXTRA_CONSTRAINT_Q): Adjust to GNU Coding Standards.
