* mn10300.h (TARGET_SWITCHES): Document `-mam33'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35552 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-07  Nick Clifton  <nickc@cygnus.com>
+
+	* mn10300.h (TARGET_SWITCHES): Document `-mam33'.
+
 2000-08-07  Graham Stott  <grahams@cygnus.co.uk>
 
 	* mn10300.md: Use nonimmediate_operand instead of general_operand
