* configure.in (FLAGS_FOR_TARGET): invert test for xgcc, should mean "if we're also building gcc, and it's a gcc that will run on the build machine, we want to use its includes instead of the system's default includes".
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35553 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-07  DJ Delorie  <dj@redhat.com>
+
+	* configure.in (FLAGS_FOR_TARGET): invert test for xgcc, should mean
+	"if we're also building gcc, and it's a gcc that will run on the
+	build machine, we want to use its includes instead of the system's
+	default includes".
+
 2000-08-04  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* MAINTAINERS: Add self to Write After Approval list.
