--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-07  Tom Tromey  <tromey@cygnus.com>
+
+	* java/io/PipedInputStream.java (read(byte[],int,int)): Mostly
+	rewrote.
+	(receive): Streamlined.
+
 2000-08-05  Tom Tromey  <tromey@cygnus.com>
 
 	* java/io/PrintWriter.java: Merged comments from Classpath.
