* java/lang/reflect/Method.java (toString): Use Class.getName, not 	Class.toString. 	* java/lang/reflect/Field.java (toString): Correct formatting. 	From Corey Minyard.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35557 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2000-08-07  Tom Tromey  <tromey@cygnus.com>
 
+	* java/lang/reflect/Method.java (toString): Use Class.getName, not
+	Class.toString.
+	* java/lang/reflect/Field.java (toString): Correct formatting.
+	From Corey Minyard.
+
 	* java/io/PipedInputStream.java (read(byte[],int,int)): Mostly
 	rewrote.
 	(receive): Streamlined.
