2000-08-07  Toon Moene  <toon@moene.indiv.nluug.nl>
	* g77spec.c (lang_specific_driver): Clearer g77 version message.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35558 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-07  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* g77spec.c (lang_specific_driver): Clearer g77 version message.
+
 2000-08-04  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* Make-lang.in (f771): Depend on $(BACKEND), not stamp-objlist.
