--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2000-08-07  Tom Tromey  <tromey@cygnus.com>
 
+	* java/lang/reflect/Method.java (hashCode): Use getName().
+	(toString): Likewise.
+	* java/lang/reflect/natMethod.cc (getType): Initialize
+	exception_types.
+
 	* java/lang/reflect/Method.java (toString): Use Class.getName, not
 	Class.toString.
 	* java/lang/reflect/Field.java (toString): Correct formatting.
