* c-lex.c (yylex): Don't allow integer suffixes 'LUL', 'Ll', 'lL'.
testsuite:
	* gcc.dg/noncompile/const-ll-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35563 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-08  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* c-lex.c (yylex): Don't allow integer suffixes 'LUL', 'Ll', 'lL'.
+
 2000-08-07  Nick Clifton  <nickc@redhat.com>
 
 	* config/mips/mips.c: Fix compile time warning messages.
