--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-08  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/noncompile/const-ll-1.c: New test.
+
 2000-08-07  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c90-printf-2.c, gcc.dg/c99-printf-2.c: New tests.
