--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-08  Richard Henderson  <rth@cygnus.com>
+
+	* gcc.dg/noncompile/920923-1.c: Declare calloc.
+
 2000-08-08  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/noncompile/const-ll-1.c: New test.
