--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2000-08-08  Tom Tromey  <tromey@cygnus.com>
+
+	* gnu/gcj/convert/Input_UTF8.java (read): Fixed handling of
+	surrogate characters.
+	* gnu/gcj/convert/Output_UTF8.java (standardUTF8): Default to
+	true.
+	(write): Correct handling of surrogate characters.
+
 2000-08-07  Tom Tromey  <tromey@cygnus.com>
 
 	* java/lang/reflect/Method.java (hashCode): Use getName().
