--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -6664,7 +6664,7 @@
     FAIL;
 }")
 
-(define_insn ""
+(define_insn "*ashldi3_internal1"
   [(set (match_operand:DI 0 "gpc_reg_operand" "=r")
 	(ashift:DI (match_operand:DI 1 "gpc_reg_operand" "r")
 		   (match_operand:SI 2 "reg_or_cint_operand" "ri")))]
@@ -6672,7 +6672,7 @@
   "sld%I2 %0,%1,%H2"
   [(set_attr "length" "8")])
   
-(define_insn ""
+(define_insn "*ashldi3_internal2"
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,?y")
 	(compare:CC (ashift:DI (match_operand:DI 1 "gpc_reg_operand" "r,r")
 			       (match_operand:SI 2 "reg_or_cint_operand" "ri,ri"))
@@ -6699,7 +6699,7 @@
 		    (const_int 0)))]
   "")
 
-(define_insn ""
+(define_insn "*ashldi3_internal3"
   [(set (match_operand:CC 3 "cc_reg_operand" "=x,?y")
 	(compare:CC (ashift:DI (match_operand:DI 1 "gpc_reg_operand" "r,r")
 			       (match_operand:SI 2 "reg_or_cint_operand" "ri,ri"))
@@ -6728,27 +6728,25 @@
 		    (const_int 0)))]
   "")
 
-(define_insn ""
+(define_insn "*ashldi3_internal4"
   [(set (match_operand:DI 0 "gpc_reg_operand" "=r")
 	(and:DI (ashift:DI (match_operand:DI 1 "gpc_reg_operand" "r")
 			   (match_operand:SI 2 "const_int_operand" "i"))
-		(match_operand:DI 3 "mask64_operand" "S")))]
-  "((GET_CODE (operands[3]) == CONST_INT
-     ? INTVAL (operands[3]) : CONST_DOUBLE_LOW (operands[3])) & 1) == 1"
-  "rldic %0,%1,%H2,%S3")
+		(match_operand:DI 3 "rldic_operand" "n")))]
+  "includes_lshift64_p (operands[2], operands[3])"
+  "rldic %0,%1,%H2,%W3")
 
-(define_insn ""
+(define_insn "ashldi3_internal5"
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,?y")
 	(compare:CC
 	 (and:DI (ashift:DI (match_operand:DI 1 "gpc_reg_operand" "r,r")
 			    (match_operand:SI 2 "const_int_operand" "i,i"))
-		 (match_operand:DI 3 "mask64_operand" "S,S"))
+		 (match_operand:DI 3 "rldic_operand" "n,n"))
 	 (const_int 0)))
    (clobber (match_scratch:DI 4 "=r,r"))]
-  "((GET_CODE (operands[3]) == CONST_INT
-     ? INTVAL (operands[3]) : CONST_DOUBLE_LOW (operands[3])) & 1) == 1"
+  "includes_lshift64_p (operands[2], operands[3])"
   "@
-   rldic. %0,%1,%H2,%S3
+   rldic. %4,%1,%H2,%W3
    #"
   [(set_attr "type" "delayed_compare")
    (set_attr "length" "4,8")])
@@ -6758,33 +6756,30 @@
 	(compare:CC
 	 (and:DI (ashift:DI (match_operand:DI 1 "gpc_reg_operand" "")
 			    (match_operand:SI 2 "const_int_operand" ""))
-		 (match_operand:DI 3 "mask64_operand" ""))
+		 (match_operand:DI 3 "rldic_operand" ""))
 	 (const_int 0)))
    (clobber (match_scratch:DI 4 ""))]
-  "((GET_CODE (operands[3]) == CONST_INT
-     ? INTVAL (operands[3]) : CONST_DOUBLE_LOW (operands[3])) & 1) == 1
-   && reload_completed"
+  "includes_lshift64_p (operands[2], operands[3]) && reload_completed"
   [(set (match_dup 4)
 	(and:DI (ashift:DI (match_dup 1) (match_dup 2))
-		 (match_dup 3)))
+		(match_dup 3)))
    (set (match_dup 0)
 	(compare:CC (match_dup 4)
 		    (const_int 0)))]
   "")
 
-(define_insn ""
+(define_insn "*ashldi3_internal6"
   [(set (match_operand:CC 4 "cc_reg_operand" "=x,?y")
 	(compare:CC
 	 (and:DI (ashift:DI (match_operand:DI 1 "gpc_reg_operand" "r,r")
 			    (match_operand:SI 2 "const_int_operand" "i,i"))
-		 (match_operand:DI 3 "mask64_operand" "S,S"))
+		    (match_operand:DI 3 "rldic_operand" "n,n"))
 	 (const_int 0)))
    (set (match_operand:DI 0 "gpc_reg_operand" "=r,r")
 	(and:DI (ashift:DI (match_dup 1) (match_dup 2)) (match_dup 3)))]
-  "((GET_CODE (operands[3]) == CONST_INT
-     ? INTVAL (operands[3]) : CONST_DOUBLE_LOW (operands[3])) & 1) == 1"
+  "includes_lshift64_p (operands[2], operands[3])"
   "@
-   rldic. %0,%1,%H2,%S3
+   rldic. %0,%1,%H2,%W3
    #"
   [(set_attr "type" "delayed_compare")
    (set_attr "length" "4,8")])
@@ -6794,15 +6789,14 @@
 	(compare:CC
 	 (and:DI (ashift:DI (match_operand:DI 1 "gpc_reg_operand" "")
 			    (match_operand:SI 2 "const_int_operand" ""))
-		 (match_operand:DI 3 "mask64_operand" ""))
+		 (match_operand:DI 3 "rldic_operand" ""))
 	 (const_int 0)))
    (set (match_operand:DI 0 "gpc_reg_operand" "")
 	(and:DI (ashift:DI (match_dup 1) (match_dup 2)) (match_dup 3)))]
-  "((GET_CODE (operands[3]) == CONST_INT
-     ? INTVAL (operands[3]) : CONST_DOUBLE_LOW (operands[3])) & 1) == 1
-   && reload_completed"
+  "includes_lshift64_p (operands[2], operands[3]) && reload_completed"
   [(set (match_dup 0)
-	(and:DI (ashift:DI (match_dup 1) (match_dup 2)) (match_dup 3)))
+	(and:DI (ashift:DI (match_dup 1) (match_dup 2))
+		(match_dup 3)))
    (set (match_dup 4)
 	(compare:CC (match_dup 0)
 		    (const_int 0)))]
@@ -6826,14 +6820,14 @@
     FAIL;
 }")
 
-(define_insn ""
+(define_insn "*lshrdi3_internal1"
   [(set (match_operand:DI 0 "gpc_reg_operand" "=r")
 	(lshiftrt:DI (match_operand:DI 1 "gpc_reg_operand" "r")
 		     (match_operand:SI 2 "reg_or_cint_operand" "ri")))]
   "TARGET_POWERPC64"
   "srd%I2 %0,%1,%H2")
 
-(define_insn ""
+(define_insn "*lshrdi3_internal2"
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,?y")
 	(compare:CC (lshiftrt:DI (match_operand:DI 1 "gpc_reg_operand" "r,r")
 				 (match_operand:SI 2 "reg_or_cint_operand" "ri,ri"))
@@ -6860,7 +6854,7 @@
 		    (const_int 0)))]
   "")
 
-(define_insn ""
+(define_insn "*lshrdi3_internal3"
   [(set (match_operand:CC 3 "cc_reg_operand" "=x,?y")
 	(compare:CC (lshiftrt:DI (match_operand:DI 1 "gpc_reg_operand" "r,r")
 				 (match_operand:SI 2 "reg_or_cint_operand" "ri,ri"))
@@ -6907,14 +6901,14 @@
     FAIL;
 }")
 
-(define_insn ""
+(define_insn "*ashrdi3_internal1"
   [(set (match_operand:DI 0 "gpc_reg_operand" "=r")
 	(ashiftrt:DI (match_operand:DI 1 "gpc_reg_operand" "r")
 		     (match_operand:SI 2 "reg_or_cint_operand" "ri")))]
   "TARGET_POWERPC64"
   "srad%I2 %0,%1,%H2")
 
-(define_insn ""
+(define_insn "*ashrdi3_internal2"
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,?y")
 	(compare:CC (ashiftrt:DI (match_operand:DI 1 "gpc_reg_operand" "r,r")
 				 (match_operand:SI 2 "reg_or_cint_operand" "ri,ri"))
@@ -6941,7 +6935,7 @@
 		    (const_int 0)))]
   "")
 
-(define_insn ""
+(define_insn "*ashrdi3_internal3"
   [(set (match_operand:CC 3 "cc_reg_operand" "=x,?y")
 	(compare:CC (ashiftrt:DI (match_operand:DI 1 "gpc_reg_operand" "r,r")
 				 (match_operand:SI 2 "reg_or_cint_operand" "ri,ri"))
@@ -7076,7 +7070,7 @@
 	  emit_insn (gen_iordi3 (tmp, operands[1],
 				 GEN_INT (value & (~ (HOST_WIDE_INT) 0xffff))));
 	}
-      else if (GET_CODE (operands[2]) == CONST_DOUBLE)
+      else
         {
 	  value = CONST_DOUBLE_LOW (operands[2]);
 	  emit_insn (gen_iordi3 (tmp, operands[1],
@@ -7084,6 +7078,7 @@
 						     & (~ (HOST_WIDE_INT) 0xffff),
 						     0, DImode)));
 	}
+
       emit_insn (gen_iordi3 (operands[0], tmp, GEN_INT (value & 0xffff)));
       DONE;
     }
@@ -7108,7 +7103,7 @@
 	  emit_insn (gen_xordi3 (tmp, operands[1],
 				 GEN_INT (value & (~ (HOST_WIDE_INT) 0xffff))));
 	}
-      else if (GET_CODE (operands[2]) == CONST_DOUBLE)
+      else
         {
 	  value = CONST_DOUBLE_LOW (operands[2]);
 	  emit_insn (gen_xordi3 (tmp, operands[1],
@@ -7116,6 +7111,7 @@
 						     & (~ (HOST_WIDE_INT) 0xffff),
 						     0, DImode)));
 	}
+
       emit_insn (gen_xordi3 (operands[0], tmp, GEN_INT (value & 0xffff)));
       DONE;
     }
@@ -10424,7 +10420,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
 	(compare:CCUNS (match_operand:SI 1 "gpc_reg_operand" "r")
 		       (match_operand:SI 2 "reg_or_u_short_operand" "rK")))]
   ""
-  "{cmpl%I2|cmplw%I2} %0,%1,%W2"
+  "{cmpl%I2|cmplw%I2} %0,%1,%b2"
   [(set_attr "type" "compare")])
 
 (define_insn "*cmpdi_internal2"
@@ -10432,7 +10428,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
 	(compare:CCUNS (match_operand:DI 1 "gpc_reg_operand" "r")
 		       (match_operand:DI 2 "reg_or_u_short_operand" "rK")))]
   ""
-  "cmpld%I2 %0,%1,%W2"
+  "cmpld%I2 %0,%1,%b2"
   [(set_attr "type" "compare")])
 
 ;; The following two insns don't exist as single insns, but if we provide
