--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-08  Kazu Hirata  <kazu@hxi.com>
+
+	* reload1.c: Fix formatting.
+
 2000-08-08  Rodney Brown  <RodneyBrown@mynd.com>
 
 	* alpha/alpha.c (alpha_emit_xfloating_libcall):
