--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-09  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/c90-const-expr-1.c: New test.
+
 2000-08-08  Richard Henderson  <rth@cygnus.com>
 
 	* gcc.dg/noncompile/920923-1.c: Declare calloc.
