--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-09  Alexandre Oliva  <aoliva@redhat.com>
+
+	* caller-save.c (mark_referenced_regs): Mark partially-overwritten
+	multi-word registers.
+
 2000-08-08  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* c-common.c (combine_strings, check_format_info): Refer to ISO C
