--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-09  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* cvt.c (convert_to_pointer_force): Fix error message when
+	attempting to cast from ambiguous base.	
+
 2000-08-08  Jason Merrill  <jason@redhat.com>
 
 	* pt.c (tsubst_aggr_type): Bail if creating the argvec fails.
