--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-09  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.abi/ptrflags.C: Adjust rtti member names.
+	* g++.old-deja/g++.abi/vmihint.C: Likewise.
+
 2000-08-09  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gcc.c-torture/execute/20000808-1.c: New test.
