--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,12 @@
 2000-08-09  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* rtti.c (build_dynamic_cast_1): Set "C" linkage for new abi
+	runtime.
+	* cp/tinfo.cc (__dynamic_cast): Likewise.
+	* cp/inc/cxxabi.h (__dynamic_cast): Likewise.	
+
+2000-08-09  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* cvt.c (convert_to_pointer_force): Fix error message when
 	attempting to cast from ambiguous base.	
 
