--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-09  Tom Tromey  <tromey@cygnus.com>
+
+	From PR gcj/310:
+	* libjava.compile/PR310.java: New file.
+	* libjava.compile/PR310.xfail: New file.
+
 2000-07-30  Anthony Green  <green@redhat.com>
 
 	* libjava.compile/PR295.java: New file.
