--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-09  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/c90-array-lval-1.c, gcc.dg/c90-scope-1.c,
+	gcc.dg/c99-array-lval-1.c, gcc.dg/c99-const-expr-1.c,
+	gcc.dg/c99-func-1.c, gcc.dg/c99-func-2.c, gcc.dg/c99-scope-1.c:
+	New tests.
+
 2000-08-09  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.abi/ptrflags.C: Adjust rtti member names.
