--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-10  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* init.c (build_aggr_init): Reject bogus array initializers
+	early.
+
 2000-08-09  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* rtti.c (build_dynamic_cast_1): Set "C" linkage for new abi
