--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-10  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.other/array3.C: New test.
+
 2000-08-09  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c90-array-lval-1.c, gcc.dg/c90-scope-1.c,
