--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-10  Kazu Hirata  <kazu@hxi.com>
+
+	* c-decl.c: Fix formatting.
+
 2000-08-10  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* c-lex.c (parse_float, yylex): For -Wtraditional, issue a
