Fix interworking support of functions in lib1funcs.asm.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35610 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-08-10  Richard Earnshaw <rearnshaw@arm.com> & Nick Clifton  <nickc@cygnus.com>
+
+	* arm.h (CPP_SPEC): Use sub-spec cpp_interwork.
+	(CPP_INTERWORK_SPEC, CPP_INTERWORK_DEFAULT_SPEC): New sub-specs.
+	(EXTRA_SPECS): Add them.
+	* arm/lib1funcs.asm: Support builds for interworking.
+	Use macros to eliminate duplicated pieces of code.
+
 2000-08-10  Kazu Hirata  <kazu@hxi.com>
 
 	* h8300.c: Fix comment typos.
